# AIQuantTrader

./: .env.sample  .gitignore  AGENTS.md  CLAUDE.md  PHASE_ROADMAP_TODO.md  QUANT_ROADMAP.md  README.md  ecosystem.config.js  install.sh  pyproject.toml  requirements.txt
aiquanttrader/: __init__.py  __main__.py  alert_delivery.py  alerts.py  backtesting.py  data_store.py  indicators.py  metrics.py  prices.py  release_manifest.py  validators.py  xau_profiles.py
config/: aiquanttrader.cron  finrobot.cron  logrotate-aiquanttrader  logrotate-finrobot  nginx-trading.aims-sg.com.conf
dashboard/: app.py
docs/: BTC_DATA_SOURCES.md  M2.3D_PARITY_REPORT.md  MERGE_STRATEGY.md  MT5_HEADLESS_BRIDGE.md  RELEASE_CHECKLIST.md  REPOSITORY_MAP.md  SECRETS_ROTATION.md  XAU_PARITY_RETEST.md
finrobot/: __main__.py  alert_delivery.py  alerts.py  data_store.py  hft.py  indicators.py  metrics.py  prices.py  release_manifest.py  validators.py  xau_profiles.py
moonshot/: trader.py
scripts/: alert_delivery.py  archive_common_files.py  autonomous_review_loop.py  bootstrap_btc_history.py  check_secrets.sh  check_stale_branches.sh  harvest_mt5_export.py  healthcheck.py  install_cron.sh  install_export_mt5.sh  install_logrotate.sh  live_avellaneda_stoikov.py  load_historical_prices.py  log_aggregator.sh  moonshot_health_check.py  mt5_configure_profile.py  mt5_entry_pause.py  mt5_ingest_common_files.py  mt5_metrics_export.py  mt5_minute_cycle.py  mt5_snapshot_prices.py  mt5_status.py  mt5_trade_report.py  mt5_validate_warehouse.py  mt5_watchdog.py  promote_compare.py  release_manifest.py  (+14 more)
(+140 files in other folders)
