[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finrobot"
version = "0.1.0"
description = "MT5-first autonomous demo trading system for XAUUSD and BTCUSD"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv",
  "pandas",
  "numpy"
]
