[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiquanttrader"
version = "2.0.0"
description = "MT5-first autonomous demo trading system for XAUUSD"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv",
  "pandas",
  "numpy",
  "streamlit"
]
